# ACG-localizer

./: .gitignore  CMakeLists.txt
cmake/: CMakeConfig.cmake.in  FindANN.cmake  FindFLANN.cmake  FindLAPACK.cmake  FindOpenMesh.cmake
data/: images.txt
src/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  acg_localizer.cc  acg_localizer_active_search.cc  acg_localizer_knn.cc  cmake_install.cmake  export_to_bundler.py  query_vector.cc  query_vector.hh
src/OpenMesh_vec/OpenMesh/Core/Geometry/: VectorT.hh
src/OpenMesh_vec/OpenMesh/Core/System/: config.h
src/features/: visual_words_handler.cc
src/flann-1.6.11/src/cpp/: CMakeLists.txt
src/flann-1.6.11/src/cpp/flann/algorithms/: kmeans_index.h  kmeans_index_original.h
src/math/: matrixbase.hh
src/sfm/: bundler_camera.hh
src/solver/: solverbase.hh
src/src/: Makefile  cmake_install.cmake
